Use classes instead of ligatures for material design icons

--- a/Emby.AutoOrganize/Configuration/autoorganizelog.html
+++ b/Emby.AutoOrganize/Configuration/autoorganizelog.html
@@ -6,12 +6,12 @@
             <div>
                 <div style="text-align: right;" class="organizeTaskPanel hide">
                     <button is="emby-button" type="button" class="btnClearCompleted raised button-cancel">
-                        <i class="material-icons">clear_all</i><span>Clear Completed</span>
+                        <i class="material-icons clear_all"></i><span>Clear Completed</span>
                     </button>
                     <button is="emby-button" type="button" class="btnClearLog raised button-cancel">
-                        <i class="material-icons">clear_all</i><span>${ButtonClear}</span>
+                        <i class="material-icons clear_all"></i><span>${ButtonClear}</span>
                     </button>
-                    <button is="emby-button" type="button" class="btnOrganize raised button-cancel"><i class="material-icons">check</i><span>Organize</span></button>
+                    <button is="emby-button" type="button" class="btnOrganize raised button-cancel"><i class="material-icons check"></i><span>Organize</span></button>
                     <progress max="100" min="0" style="width: 100px;" class="organizeProgress"></progress>
                 </div>
                 <div class="listTopPaging">
