--- a/Emby.AutoOrganize/Configuration/fileorganizer.template.html
+++ b/Emby.AutoOrganize/Configuration/fileorganizer.template.html
@@ -1,5 +1,5 @@
 ﻿<div class="formDialogHeader">
-    <button is="paper-icon-button-light" class="btnCancel autoSize" tabindex="-1"><i class="material-icons">&#xE5C4;</i></button>
+    <button is="paper-icon-button-light" class="btnCancel autoSize" tabindex="-1"><i class="material-icons arrow_back"></i></button>
     <h3 class="formDialogHeaderTitle"></h3>
 </div>
 
@@ -28,7 +28,7 @@
                             <div style="flex-grow: 1; position: relative;">
                                 <select is="emby-select" id="selectMedias" data-mini="true" required="required"></select>
                             </div>
-                            <button type="button" is="paper-icon-button-light" id="btnNewMedia" class="autoSize"><i class="material-icons">add</i></button>
+                            <button type="button" is="paper-icon-button-light" id="btnNewMedia" class="autoSize"><i class="material-icons add"></i></button>
                         </div>
                     </div>
                     <div class="fldSelectMediaFolder hide selectContainer">
