Include a proper description for the LeftOverFileExtensionsToDelete fields

--- a/Emby.AutoOrganize/Configuration/autoorganizetv.html
+++ b/Emby.AutoOrganize/Configuration/autoorganizetv.html
@@ -197,7 +197,7 @@
                 </div>
                 <div class="inputContainer">
                     <input is="emby-input" id="txtDeleteLeftOverFiles" type="text" label="Delete left over files" />
-                    <div class="fieldDescription">Each value separated by ;</div>
+                    <div class="fieldDescription">Provide a list of file extensions to delete, separated by semicolons (;)</div>
                 </div>
                 <div class="checkboxContainer checkboxContainer-withDescription">
                     <label>
