--- a/Emby.AutoOrganize/Web/autoorganizesmart.html
+++ b/Emby.AutoOrganize/Web/autoorganizesmart.html
@@ -1,9 +1,8 @@
-﻿<div id="libraryFileOrganizerSmartMatchPage" data-role="page" class="page type-interior pluginConfigurationPage withTabs" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Auto-Organize" data-controller="__plugin/AutoOrganizeSmartJs">
-
+﻿<div id="libraryFileOrganizerSmartMatchPage" data-role="page" class="page type-interior pluginConfigurationPage withTabs" data-controller="__plugin/AutoOrganizeSmartJs">
     <div>
         <div class="content-primary">
 
-            <div class="readOnlyContent">
+            <div class="readOnlyContent padded-top">
                 <p>Smart Matches</p>
                 <div class="divMatchInfos"></div>
             </div>
