--- a/Emby.AutoOrganize/Web/autoorganizetv.html
+++ b/Emby.AutoOrganize/Web/autoorganizetv.html
@@ -1,8 +1,8 @@
-﻿<div id="libraryFileOrganizerPage" data-role="page" class="page type-interior pluginConfigurationPage withTabs" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Auto-Organize" data-controller="__plugin/AutoOrganizeTvJs">
+﻿<div id="libraryFileOrganizerPage" data-role="page" class="page type-interior pluginConfigurationPage withTabs" data-controller="__plugin/AutoOrganizeTvJs">
     <div>
         <div class="content-primary">
 
-            <form class="libraryFileOrganizerForm">
+            <form class="libraryFileOrganizerForm padded-top">
 
                 <div>
                     <label class="checkboxContainer">
@@ -16,7 +16,9 @@
                             <input is="emby-input" id="txtWatchFolder" type="text" label="Watch folder:" />
                             <div class="fieldDescription">This folder will be monitored for new episodes.</div>
                         </div>
-                        <button type="button" is="paper-icon-button-light" id="btnSelectWatchFolder" title="Select directory" class="autoSize"><i class="material-icons search"></i></button>
+                        <button type="button" is="paper-icon-button-light" id="btnSelectWatchFolder" title="Select directory" class="autoSize">
+                            <span class="material-icons search"></span>
+                        </button>
                     </div>
                 </div>
                 <div class="inputContainer">
@@ -231,7 +233,9 @@
                     <select id="selectSeriesFolder" is="emby-select" label="Default Series library:"></select>
                 </div>
                 <div>
-                    <button is="emby-button" type="submit" class="raised button-submit block"><span>Save</span></button>
+                    <button is="emby-button" type="submit" class="raised button-submit block">
+                        <span>Save</span>
+                    </button>
                 </div>
             </form>
 
