--- a/Emby.AutoOrganize/Web/fileorganizer.template.html
+++ b/Emby.AutoOrganize/Web/fileorganizer.template.html
@@ -1,5 +1,7 @@
 ﻿<div class="formDialogHeader">
-    <button is="paper-icon-button-light" class="btnCancel autoSize" tabindex="-1"><i class="material-icons arrow_back"></i></button>
+    <button is="paper-icon-button-light" class="btnCancel autoSize" tabindex="-1">
+        <span class="material-icons arrow_back"></span>
+    </button>
     <h3 class="formDialogHeaderTitle"></h3>
 </div>
 
@@ -28,7 +30,9 @@
                             <div style="flex-grow: 1; position: relative;">
                                 <select is="emby-select" id="selectMedias" data-mini="true" required="required"></select>
                             </div>
-                            <button type="button" is="paper-icon-button-light" id="btnNewMedia" class="autoSize"><i class="material-icons add"></i></button>
+                            <button type="button" is="paper-icon-button-light" id="btnNewMedia" class="autoSize">
+                                <span class="material-icons add"></span>
+                            </button>
                         </div>
                     </div>
                     <div class="fldSelectMediaFolder hide selectContainer">
